--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -2,20 +2,21 @@
 <html lang="en">
  
 <head>
-    <title>Python Flask Bucket List App</title>
+    <title>Harvard Forum</title>
  
  
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
  
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
- 
+
+    <link href="../static/index.css" rel="stylesheet">
  
 </head>
  
 <body>
  
     <div class="container">
-        <div class="header">
+        <!--div class="header">
             <nav>
                 <ul class="nav nav-pills pull-right">
                     <li role="presentation" class="active"><a href="#">Home</a>
@@ -26,17 +27,19 @@
                     </li>
                 </ul>
             </nav>
-            <h3 class="text-muted">Python Flask App</h3>
-        </div>
+            <h3 class="text-muted">Harvard Forum</h3>
+        </div> -->
  
         <div class="jumbotron">
-            <h1>Bucket List App</h1>
+            <h1>HARVARD FORUM</h1>
             <p class="lead"></p>
-            <p><a class="btn btn-lg btn-success" href="showSignUp" role="button">Sign up today</a>
+            <p><a class="btn btn-lg btn-success" href="showSignUp" role="button">Get Started!</a>
+            </p>
+            <p><a class="btn btn-lg btn-success" href="showSignIn" role="button">Log In</a>
             </p>
         </div>
  
-        <div class="row marketing">
+        <!--div class="row marketing">
             <div class="col-lg-6">
                 <h4>Bucket List</h4>
                 <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
@@ -58,7 +61,7 @@
                 <h4>Bucket List</h4>
                 <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
             </div>
-        </div>
+        </div>-->
  
         <footer class="footer">
             <p>&copy; Company 2015</p>
