--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -37,6 +37,7 @@
             </p>
             <p><a class="btn btn-lg btn-success" href="showSignIn" role="button">Log In</a>
             </p>
+            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3a/Harvard_Wreath_Logo_1.svg/1051px-Harvard_Wreath_Logo_1.svg.png" alt="Mountain View" style="width:304px;height:228px;">
         </div>
  
         <!--div class="row marketing">
