--- a/FlaskApp/static/signup.css
+++ b/FlaskApp/static/signup.css
@@ -25,7 +25,7 @@ body {
   font-size: 16px;
 }
 .form-signin .form-control:focus {
-  z-index: 2;
+  z-index: auto;
 }
 .form-signin input[type="email"] {
   margin-bottom: -1px;
