--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -65,7 +65,7 @@
         </div>-->
  
         <footer class="footer">
-            <p>&copy; Company 2015</p>
+            <p>&copy; Company EMAX 2016</p>
         </footer>
  
     </div>
