--- a/FlaskApp/static/signup.css
+++ b/FlaskApp/static/signup.css
@@ -28,12 +28,17 @@ body {
   z-index: auto;
 }
 .form-signin input[type="email"] {
-  margin-bottom: -1px;
+  margin-bottom: 10px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 .form-signin input[type="password"] {
+  margin-top: -1px;
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+
+a:hover {
+  text-decoration: none;
 }
