--- a/FlaskApp/static/login.css
+++ b/FlaskApp/static/login.css
@@ -25,15 +25,25 @@ body {
   font-size: 16px;
 }
 .form-signin .form-control:focus {
-  z-index: 2;
+  z-index: auto;
 }
 .form-signin input[type="email"] {
-  margin-bottom: -1px;
+  margin-bottom: 10px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 .form-signin input[type="password"] {
+  margin-top: -1px;
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+/*
+a:link {
+    color: white;
+}
+
+a:hover {
+    text-decoration: none;
+}*/
