--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -16,26 +16,16 @@
 <body>
  
     <div class="container">
-        <!--div class="header">
-            <nav>
-                <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active"><a href="#">Home</a>
-                    </li>
-                    <li role="presentation"><a href="#">Sign In</a>
-                    </li>
-                    <li role="presentation"><a href="showSignUp">Sign Up</a>
-                    </li>
-                </ul>
-            </nav>
-            <h3 class="text-muted">Harvard Forum</h3>
-        </div> -->
+        <div class="header">
+            <h3 class="text-muted"><a href="/" style="text-decoration:none">Harvard Forum</a></h3>
+        </div>
  
         <div class="jumbotron">
             <h1>HARVARD FORUM</h1>
             <p class="lead"></p>
             <p><a class="btn btn-lg btn-success" href="showSignUp" role="button">Get Started!</a>
             </p>
-            <p><a class="btn btn-lg btn-success" href="showSignIn" role="button">Log In</a>
+            <p><a class="btn btn-lg btn-success" href="showLogIn" role="button">Log In</a>
             </p>
             <img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3a/Harvard_Wreath_Logo_1.svg/1051px-Harvard_Wreath_Logo_1.svg.png" alt="Mountain View" style="width:304px;height:228px;">
         </div>
