--- a/FlaskApp/templates/login.html
+++ b/FlaskApp/templates/login.html
@@ -14,17 +14,22 @@
   <body>
  
     <div class="container">
- 
+
+      <div class="header">
+        <h3 class="text-muted"><a href="/" style="text-decoration:none">Harvard Forum</a></h3>
+      </div>
+
       <div class="jumbotron">
         <h1>HARVARD FORUM</h1>
         <form class="form-signin">
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
-        <p><a class="btn btn-lg btn-success" href="showHome" role="button">Log In</a>
-        </p>
-        <!--<button id="btnLogIn" class="btn btn-lg btn-primary btn-block" href="showHome" type="button">Log In</button>-->
+
+        <a href = "showLogIn><button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button"><style="color: white">Log in</style></button></a>
+        <p style="font-size:14px">Don't have an account? <a href="showSignUp">Sign up here.</a></p>
       </form>
       </div>
  
