--- a/FlaskApp/templates/signup.html
+++ b/FlaskApp/templates/signup.html
@@ -8,6 +8,7 @@
  
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <link href="../static/signup.css" rel="stylesheet">
+    <script src="../static/js/app.js"></script>
     
   </head>
  
@@ -43,5 +44,7 @@
       </footer>
  
     </div>
+
+    <script src="../static/app.js"></script>
   </body>
 </html>
