--- a/FlaskApp/templates/login.html
+++ b/FlaskApp/templates/login.html
@@ -28,7 +28,8 @@
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
 
-        <a href = "showLogIn><button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button"><style="color: white">Log in</style></button></a>
+        <button id="btnLogin" class="btn btn-lg btn-primary btn-block" type="button"><style="color: white">Log in</style></button>
+
         <p style="font-size:14px">Don't have an account? <a href="showSignUp">Sign up here.</a></p>
       </form>
       </div>
@@ -38,7 +39,7 @@
       <footer class="footer">
         <p>&copy; Company 2015</p>
       </footer>
- 
     </div>
+        <script src="../static/app.js?version1.9"></script>
   </body>
 </html>
