--- a/FlaskApp/templates/signup.html
+++ b/FlaskApp/templates/signup.html
@@ -31,7 +31,7 @@
           <label for="confirmPassword" class="sr-only">Password</label>
           <input type="password" name="inputPassword" id="confirmPassword" class="form-control" placeholder="Confirm Password" required>
            
-          <a href="showLogIn" style><button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button"> <style="color: white">Sign up</button></a>
+          <a href="showLogIn" style><button id="btnLogIn" class="btn btn-lg btn-primary btn-block" type="button"> <style="color: white">Sign up</button></a>
 
           <p style="font-size:14px"> Already have an account? <a href="showLogIn">Log in here</a></p>
         </form>
