--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -23,6 +23,7 @@
         <div class="jumbotron">
             <h1>HARVARD FORUM</h1>
             <p class="lead"></p>
+            <!--<a href = "showSignUp"><button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button"><style="color: white">Get Started!</style></button></a>-->
             <p><a class="btn btn-lg btn-success" href="showSignUp" role="button">Get Started!</a>
             </p>
             <p><a class="btn btn-lg btn-success" href="showLogIn" role="button">Log In</a>
