--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -17,7 +17,7 @@
  
     <div class="container">
         <div class="header">
-            <h3 class="text-muted"><a href="/" style="text-decoration:none">Harvard Forum</a></h3>
+            <a href="/"><img src="../static/logo.png" alt="Askii" style="width:100px;height:50px;></a>
         </div>
  
         <div class="jumbotron">
@@ -28,7 +28,7 @@
             </p>
             <p><a class="btn btn-lg btn-success" href="showLogIn" role="button">Log In</a>
             </p>
-            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3a/Harvard_Wreath_Logo_1.svg/1051px-Harvard_Wreath_Logo_1.svg.png" alt="Mountain View" style="width:304px;height:228px;">
+            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3a/Harvard_Wreath_Logo_1.svg/1051px-Harvard_Wreath_Logo_1.svg.png" alt="Veritas" style="width:304px;height:228px;">
         </div>
  
         <!--div class="row marketing">
