--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -16,19 +16,15 @@
 <body>
  
     <div class="container">
-        <div class="header">
-            <a href="/"><img src="../static/logo.png" alt="Askii" style="width:100px;height:50px;></a>
-        </div>
  
         <div class="jumbotron">
-            <h1>HARVARD FORUM</h1>
+            <a href="/"><img src="../static/logo.png" alt="Askii" style="width:400px;height:200px;"></a>
             <p class="lead"></p>
             <!--<a href = "showSignUp"><button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button"><style="color: white">Get Started!</style></button></a>-->
             <p><a class="btn btn-lg btn-success" href="showSignUp" role="button">Get Started!</a>
             </p>
             <p><a class="btn btn-lg btn-success" href="showLogIn" role="button">Log In</a>
             </p>
-            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3a/Harvard_Wreath_Logo_1.svg/1051px-Harvard_Wreath_Logo_1.svg.png" alt="Veritas" style="width:304px;height:228px;">
         </div>
  
         <!--div class="row marketing">
