--- a/FlaskApp/templates/login.html
+++ b/FlaskApp/templates/login.html
@@ -16,7 +16,7 @@
     <div class="container">
 
       <div class="header">
-        <h3 class="text-muted"><a href="/" style="text-decoration:none">Harvard Forum</a></h3>
+        <a href="/"><img src="../static/logo.png" alt="Askii" style="width:100px;height:50px;"></a>
       </div>
 
       <div class="jumbotron">
