--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -17,8 +17,8 @@
  
     <div class="container">
  
-        <div class="jumbotron">
-            <a href="/"><img src="../static/logo.png" alt="Askii" style="width:400px;height:200px;"></a>
+        <div class="jumbotron" style="background-color:transparent !important;">
+            <a href="/"><img src="../static/logo.png" alt="Askii" style="width:400px;height:200px;background-color: transparent"></a>
             <p class="lead"></p>
             <!--<a href = "showSignUp"><button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button"><style="color: white">Get Started!</style></button></a>-->
             <p><a class="btn btn-lg btn-success" href="showSignUp" role="button">Get Started!</a>
