--- a/FlaskApp/static/index.css
+++ b/FlaskApp/static/index.css
@@ -1,14 +1,7 @@
-.flex-container {
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.container {
+  position: relative;
+  height: 14rem;
+  border: 1px solid;
 }
 
 .jumbotron {
@@ -16,11 +9,4 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
-
-.footer {
-   position:absolute;
-   bottom:0;
-   width:100%;
-   height:60px;   /* Height of the footer */
 }
