--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -21,9 +21,14 @@
             <a href="/"><img src="../static/logo.png" alt="Askii" style="width:400px;height:200px;background-color: transparent"></a>
             <p class="lead"></p>
             <!--<a href = "showSignUp"><button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button"><style="color: white">Get Started!</style></button></a>-->
-            <p><a class="btn btn-lg btn-success" href="showSignUp" role="button">Get Started!</a>
+
+            <p><a href="showSignUp"><button id="btnLogin" class="btn btn-lg btn-primary btn-block" type="button">Get Started!</style></button></a></p>
+
+            <p><a href="showLogIn"><button id="btnLogin" class="btn btn-lg btn-primary btn-block" type="button">Login</style></button></a></p>
+
+            <!--<p><a class="btn btn-lg btn-success" href="showSignUp" role="button">Get Started!</a>
             </p>
-            <p><a class="btn btn-lg btn-success" href="showLogIn" role="button">Log In</a>
+            <p><a class="btn btn-lg btn-success" href="showLogIn" role="button">Log In</a>-->
             </p>
         </div>
  
