--- a/FlaskApp/static/signup.css
+++ b/FlaskApp/static/signup.css
@@ -3,19 +3,19 @@ body {
   padding-bottom: 40px;
 }
  
-.form-signin {
+.form-signup {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
 }
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
+.form-signup .form-signup-heading,
+.form-signup .checkbox {
   margin-bottom: 10px;
 }
-.form-signin .checkbox {
+.form-signup .checkbox {
   font-weight: normal;
 }
-.form-signin .form-control {
+.form-signup .form-control {
   position: relative;
   height: auto;
   -webkit-box-sizing: border-box;
@@ -24,15 +24,15 @@ body {
   padding: 10px;
   font-size: 16px;
 }
-.form-signin .form-control:focus {
+.form-signup .form-control:focus {
   z-index: auto;
 }
-.form-signin input[type="email"] {
+.form-signup input[type="email"] {
   margin-bottom: 10px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-.form-signin input[type="password"] {
+.form-signup input[type="password"] {
   margin-top: -1px;
   margin-bottom: 10px;
   border-top-left-radius: 0;
