--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
  
 <head>
-    <title>Harvard Forum</title>
- 
- 
+    <title>Askii</title>
+     
+    <link rel="icon" type="image/png" href="../static/favicon.png" >
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
  
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
 
     <link href="../static/index.css" rel="stylesheet">
+    
  
 </head>
  
